포트폴리오 대문페이지 수정

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -43,7 +43,7 @@
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">클라우드프로젝트</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<li><a href="https://github.com/miniplugin/kimilguk" target="blank">Git소스바로가기(형상관리)</a></li>
+					<li><a href="https://github.com/TaeHee-work" target="blank">Git소스바로가기(형상관리)</a></li>
 					<li class="dropdown">
 					<a class="dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">헤로쿠클라우드</a>
 					<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -95,7 +95,7 @@
 </div>
 <!-- 1페이지 스크롤 영역 Start -->
 <div id="fullpage">
-	<!-- 헤더 -->
+	<!-- 헤더 (포트폴리오 대문페이지)-->
 	<div class="header section" data-anchor="header">
 		<div class="container">
 			<div class="slide active">
@@ -146,7 +146,7 @@
 		</div>
 	</div>
 
-	<!-- 1 번 섹션 -->
+	<!-- 1 번 섹션 (보유기술 부분)-->
 	<div class="section" data-anchor="section1">
 		<div class="container">
 			<div class="row">
@@ -229,7 +229,7 @@
 		</div>
 	</div>
 
-	<!-- 2번 섹션. 흰 배경 -->
+	<!-- 2번 섹션. 흰 배경 (관심분야)-->
 	<div class="section" data-anchor="section2">
 		<div class="container">
 			<div class="row">
@@ -246,7 +246,7 @@
 		</div>
 	</div>
 
-	<!-- 푸터 -->
+	<!-- 푸터 (자격증/수상내역)-->
 	<footer class="footer section" data-anchor="footer">
 		<div class="container">
 			<div class="row">
@@ -299,7 +299,7 @@
 <script>
 $("#fullpage").fullpage({    //기존
 		anchors: ['header', 'section1', 'section2', 'footer'],
-		navigationTooltips: ['header', 'section1', 'section2', 'footer'],
+		navigationTooltips: ['포트폴리오', '보유기술', '관심분야', '자격증'],
 		sectionsColor: ['#0798ec','#7baabe','#4bbfc3','#0d121b'],
 		navigation: true,
 		//loopBottom: true,
