--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -38,7 +38,7 @@
 				<a class="nav-link" href="#section2">관심분야</a>
 			</li>
 			<li class="nav-item menu_footer">
-				<a class="nav-link" href="#footer">자격증 및 수상내역</a>
+				<a class="nav-link" href="#footer">자격증 및 작업내역</a>
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">클라우드프로젝트</a>
@@ -250,17 +250,18 @@
 	<footer class="footer section" data-anchor="footer">
 		<div class="container">
 			<div class="row">
-			  <h2 class="col-md-7">Certifications &amp; Awards</h2>
+			  <h2 class="col-md-7">Certifications &amp; Works</h2>
 	          <ul class="fa-ul col-md-5 text-left">
 	            <li>
 	              <i class="fa-li fa fa-trophy text-warning"></i>
-	              <strong>수상내용 추가</strong>   2019년 5월 30일</li>
+	              <strong>클라우드-파스타 스프링 프로젝트</strong> http://leetaehee-mysql.paas-ta.org/ </li>
 	            <li>
 	              <i class="fa-li fa fa-trophy text-warning"></i>
-	              <strong>자격증 추가</strong>   2019년 5월 29일</li>
+	              <strong>클라우드-파스타 전자정부 프로젝트</strong> http://leetaehee-egov.paas-ta.org/tiles/main.do </li>
+	              <span>- 관리자관리기능 메뉴추가 : 마이바티스 사용 -</span>
 	            <li>
 	              <i class="fa-li fa fa-trophy text-warning"></i>
-	              <strong>자격증 추가</strong>   2019년 5월 29일</li>
+	              <strong>클라우드-헤로쿠 스프링 프로젝트(접속시 시간이 오래걸림)</strong> https://taehee01.herokuapp.com/ </li>
 	          </ul>
 			</div>
 		</div>
